added the challenge sharing feature
